name: ethereum-data-leveldb
version: 0.0.4
cabal-version: >=1.10
build-type: Simple
author: Jamshid
license-file:  LICENSE
maintainer:    jamshidnh@gmail.com
synopsis: A Haskell version of an Ethereum client
extra-source-files:
               fastNonceFinder/bitfn.h
               fastNonceFinder/sha3.c
               fastNonceFinder/sha3.h
category:      Data Structures
license: BSD3
description:  
    The client described in the Ethereum Yellowpaper

source-repository this
  type:     git
  location: https://github.com/jamshidh/ethereum-client-haskell
  branch:   master
  tag:      v0.0.4

library
    default-language: Haskell98
    build-depends: 
                   base >= 4 && < 5
                 , base16-bytestring
                 , binary
                 , bytestring
                 , containers
                 , cryptohash
                 , data-default
                 , directory
                 , either
                 , entropy
                 , ethereum-encryption
                 , ethereum-merkle-patricia-db
                 , ethereum-rlp
                 , ethereum-util
                 , filepath
                 , haskoin
                 , leveldb-haskell
                 , mtl
                 , network
                 , nibblestring
                 , resourcet
                 , SHA2
                 , time
                 , transformers
                 , vector
                 , ansi-wl-pprint
    exposed-modules: 
                   Blockchain.Colors
                   Blockchain.Constants
                   Blockchain.DBM
                   Blockchain.Data.Address
                   Blockchain.Data.AddressStateDB
                   Blockchain.Data.BlockDB
                   Blockchain.Data.Code
                   Blockchain.Data.DataDefs
                   Blockchain.Data.Log
                   Blockchain.Data.Peer
                   Blockchain.Data.Transaction
                   Blockchain.Data.TransactionReceipt
                   Blockchain.ExtDBs
                   Blockchain.DB.CodeDB
    C-sources: fastNonceFinder/nonceFinder.c
    ghc-options: -Wall
    buildable: True
    hs-source-dirs: src

